# vala-language-server

./: .editorconfig  .gitignore  .gitmodules  .vala-lint.conf  README.md  build.sh  config.vala.in  context.vala  find_symbol.vala  flake.nix  girdocumentation.vala  index.html  iterator.vala  lint.sh  list_symbols.vala  main.vala  meson.build  meson_options.txt  protocol.vala  report.vala  reporter.vala  text_document.vala  textdocument.vala  util.vala  vala038_workarounds.vala  version.vala.in
.github/: FUNDING.yml
.obs/: workflows.yml
ccode/: Vala.CCodeAssignment.CCodeAssignment.html  Vala.CCodeAssignment._left.html  Vala.CCodeAssignment._operator.html  Vala.CCodeAssignment._right.html  Vala.CCodeAssignment.html  Vala.CCodeAssignment.left.html  Vala.CCodeAssignment.operator.html  Vala.CCodeAssignment.right.html  Vala.CCodeAssignment.write.html  Vala.CCodeAssignment.write_inner.html  Vala.CCodeAssignmentOperator.ADD.html  Vala.CCodeAssignmentOperator.BITWISE_AND.html  Vala.CCodeAssignmentOperator.BITWISE_OR.html  Vala.CCodeAssignmentOperator.BITWISE_XOR.html  Vala.CCodeAssignmentOperator.DIV.html  Vala.CCodeAssignmentOperator.MUL.html  Vala.CCodeAssignmentOperator.PERCENT.html  Vala.CCodeAssignmentOperator.SHIFT_LEFT.html  Vala.CCodeAssignmentOperator.SHIFT_RIGHT.html  Vala.CCodeAssignmentOperator.SIMPLE.html  Vala.CCodeAssignmentOperator.SUB.html  Vala.CCodeAssignmentOperator.html  Vala.CCodeBinaryExpression.CCodeBinaryExpression.html  Vala.CCodeBinaryExpression._left.html  Vala.CCodeBinaryExpression._operator.html  Vala.CCodeBinaryExpression._right.html  Vala.CCodeBinaryExpression.html  Vala.CCodeBinaryExpression.left.html  Vala.CCodeBinaryExpression.operator.html  Vala.CCodeBinaryExpression.right.html  Vala.CCodeBinaryExpression.write.html  Vala.CCodeBinaryExpression.write_inner.html  Vala.CCodeBinaryOperator.AND.html  Vala.CCodeBinaryOperator.BITWISE_AND.html  Vala.CCodeBinaryOperator.BITWISE_OR.html  Vala.CCodeBinaryOperator.BITWISE_XOR.html  Vala.CCodeBinaryOperator.DIV.html  Vala.CCodeBinaryOperator.EQUALITY.html  Vala.CCodeBinaryOperator.GREATER_THAN.html  Vala.CCodeBinaryOperator.GREATER_THAN_OR_EQUAL.html  (+481 more)
codegen/: Vala.CCodeArrayModule.CCodeArrayModule.html  Vala.CCodeArrayModule.append_initializer_list.html  Vala.CCodeArrayModule.append_struct_array_free.html  Vala.CCodeArrayModule.append_struct_array_free_loop.html  Vala.CCodeArrayModule.append_vala_array_free.html  Vala.CCodeArrayModule.append_vala_array_free_loop.html  Vala.CCodeArrayModule.append_vala_array_length.html  Vala.CCodeArrayModule.append_vala_array_move.html  Vala.CCodeArrayModule.copy_value.html  Vala.CCodeArrayModule.destroy_value.html  Vala.CCodeArrayModule.generate_array_add_wrapper.html  Vala.CCodeArrayModule.generate_array_copy_wrapper.html  Vala.CCodeArrayModule.generate_array_dup_wrapper.html  Vala.CCodeArrayModule.generate_parameter.html  Vala.CCodeArrayModule.get_array_length_cexpression.html  Vala.CCodeArrayModule.get_array_length_cname.html  Vala.CCodeArrayModule.get_array_length_cvalue.html  Vala.CCodeArrayModule.get_array_size_cname.html  Vala.CCodeArrayModule.get_dup_func_expression.html  Vala.CCodeArrayModule.get_parameter_array_length_cname.html  Vala.CCodeArrayModule.get_variable_array_length_cname.html  Vala.CCodeArrayModule.html  Vala.CCodeArrayModule.is_array_add.html  Vala.CCodeArrayModule.next_array_add_id.html  Vala.CCodeArrayModule.next_array_dup_id.html  Vala.CCodeArrayModule.visit_array_creation_expression.html  Vala.CCodeArrayModule.visit_assignment.html  Vala.CCodeArrayModule.visit_element_access.html  Vala.CCodeArrayModule.visit_slice_expression.html  Vala.CCodeAssignmentModule.CCodeAssignmentModule.html  Vala.CCodeAssignmentModule.emit_simple_assignment.html  Vala.CCodeAssignmentModule.html  Vala.CCodeAssignmentModule.store_field.html  Vala.CCodeAssignmentModule.store_local.html  Vala.CCodeAssignmentModule.store_parameter.html  Vala.CCodeAssignmentModule.store_value.html  Vala.CCodeAssignmentModule.visit_assignment.html  Vala.CCodeAttribute.CCodeAttribute.html  Vala.CCodeAttribute._array_length.html  Vala.CCodeAttribute._array_length_expr.html  (+1067 more)
data/: meson.build
data/man/: vala-language-server.1.scd
debian/: control  (+4 more)
debug-ui/: codenode-ui.vala  main.vala  meson.build
lib/: meson.build
plugins/gnome-builder/: get_builder_abi.sh  meson.build  vala_langserv.plugin  vala_langserv.plugin.in  vala_langserv.py
src/: cnamemapper.vala  find_scope.vala  find_symbol.vala  girdocumentation.vala  jsonrpc.vala  list_symbols.vala  main.vala  meson.build  protocol.vala  reporter.vala  request.vala  scheduler.vala  server.vala  servertypes.vala  textdocument.vala  util.vala  windows.vapi
src/analysis/: codeanalyzer.vala  codelensanalyzer.vala  codestyleanalyzer.vala  inlayhintnodes.vala  symbolenumerator.vala
src/codeaction/: adddefaulttoswitchaction.vala  addotherconstantstoswitchaction.vala  addthrowsdeclaration.vala  addtrycatchassignmentaction.vala  addtrycatchstatementaction.vala  baseconverteraction.vala  implementconstructoraction.vala  implementmissingprereqsaction.vala  implementnamedconstructoraction.vala
src/codehelp/: callhierarchy.vala  codeaction.vala  codehelp.vala  codelensengine.vala  completionengine.vala  find_scope.vala  find_symbol.vala  formatter.vala  nodesearch.vala  signaturehelpengine.vala  symbolextractor.vala  symbolreferences.vala  symbolvisitor.vala  typehierarchy.vala
src/completion/: completionengine.vala  symbolextractor.vala
src/documentation/: cnamemapper.vala  doccomment.vala  girdocumentation.vala
src/formatter/: formatter.vala
src/projects/: buildtarget.vala  buildtask.vala  ccproject.vala  compilation.vala  defaultproject.vala  filecache.vala  mesonproject.vala  mesontarget.vala  project.vala  simpletarget.vala  textdocument.vala  types.vala
src/threading/: projectworker.vala  scheduler.vala  sourcefileworker.vala  worker.vala
tests/: 106-autocompletion-in-string-literals.lstf  138-suggest-overridable-symbols.lstf  153-signaturehelp-shared-prefix.lstf  57-suggest-overridable-symbols.lstf  diagnostics.lstf  meson.build
(+12900 files in other folders)
