option('parse_system_girs', type: 'boolean', value: false, description: 'Parse system GIRs for symbol documentation')
option('active_parameter', type: 'boolean', value: false, description: 'Support activeParameter in signatureHelp')
option('debug_mem', type: 'boolean', value: false, description: 'Debug memory usage')
