option('active_parameter', type: 'boolean', value: false, description: 'Support activeParameter in signatureHelp')
option('debug_mem', type: 'boolean', value: false, description: 'Debug memory usage')
option('builder_abi', type: 'string', value: 'auto', description: 'Builder ABI version. Use a value like \'3.38\'')
option('man_pages', type: 'feature', value: 'auto', description: 'Generate and install man pages.')
