executable('debug-ui',
            dependencies: [
                libvala,
                dependency('gtk+-3.0'),
                dependency('gee-0.8')
            ],
            sources: [
                conf_file,
                'main.vala',
                'codenode-ui.vala',
                util
            ]
)