vls_src = files([
  'analysis/codeanalyzer.vala',
  'analysis/codelensanalyzer.vala',
  'analysis/codestyleanalyzer.vala',
  'analysis/symbolenumerator.vala',
  'codeaction/baseconverteraction.vala',
  'codeaction/implementconstructoraction.vala',
  'codeaction/implementmissingprereqsaction.vala',
  'codehelp/callhierarchy.vala',
  'codehelp/codeaction.vala',
  'codehelp/codehelp.vala',
  'codehelp/codelensengine.vala',
  'codehelp/completionengine.vala',
  'codehelp/find_scope.vala',
  'codehelp/formatter.vala',
  'codehelp/nodesearch.vala',
  'codehelp/signaturehelpengine.vala',
  'codehelp/symbolextractor.vala',
  'codehelp/symbolreferences.vala',
  'codehelp/symbolvisitor.vala',
  'documentation/cnamemapper.vala',
  'documentation/doccomment.vala',
  'documentation/girdocumentation.vala',
  'projects/buildtarget.vala',
  'projects/buildtask.vala',
  'projects/ccproject.vala',
  'projects/compilation.vala',
  'projects/defaultproject.vala',
  'projects/filecache.vala',
  'projects/mesonproject.vala',
  'projects/project.vala',
  'projects/textdocument.vala',
  'projects/types.vala',
  'protocol.vala',
  'reporter.vala',
  'request.vala',
  'server.vala',
])

if get_option('active_parameter')
  add_project_arguments(['--define=VALA_FEATURE_INITIAL_ARGUMENT_COUNT'], language: 'vala')
endif

vls = executable('vala-language-server',
  dependencies: deps,
  sources: [vls_src, conf_file, version_file, extra_vala_sources],
  c_args: ['-DG_LOG_DOMAIN="vls"'],
  install: true)
